🎨 Fixed background overflow in MovieCards

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,6 @@ body {
 }
 
 @keyframes twinkle {
-
   0%,
   100% {
     transform: translateY(0) scale(1);
@@ -32,13 +31,11 @@ body {
 }
 
 @keyframes flash {
-
   from,
   50%,
   to {
     background-color: transparent;
   }
-
   25%,
   75% {
     background-color: rgba(72, 67, 60, 0.509);
@@ -57,16 +54,14 @@ body {
   .perspective {
     perspective: 1000px;
   }
-
   .flip-card-inner {
-    transition: transform 0.6s;
+    transition: transform 0.9s;
     transform-style: preserve-3d;
+    position: relative;
   }
-
   .flip-card-inner.flipped {
     transform: rotateY(180deg);
   }
-
   .flip-card-front,
   .flip-card-back {
     backface-visibility: hidden;
@@ -75,7 +70,6 @@ body {
     height: 100%;
     overflow: hidden; 
   }
-
   .flip-card-back {
     transform: rotateY(180deg);
   }
